--- a/THANKS
+++ b/THANKS
@@ -12,6 +12,7 @@ Akim Demaille <demaille@inf.enst.fr>
 Bruno Haible <haible@ilog.fr>
 Carl D. Roth <roth@cse.ucsc.edu>
 Charles S. Kerr <cskerr@delenn.jccbi.gov>
+Eric Estievenart <eric@via.ecp.fr>
 H.J. Lu <hjl@gnu.org>
 Ian Lance Taylor <ian@cygnus.com>
 Joel Cannon <cannon@alpha.centenary.edu>
