--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 1998-11-04  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltconfig.in (need_locks): if neither `-c -o' nor hard links are
+ 	available, fallback to not so safe mechanism, by setting
+	need_locks to warn
+	* ltmain.in (need_locks): when need_locks is set to warn, use the
+	lockfile to try to fail in case of incorrect concurrent builds
+
 	* THANKS: Added Eric Estievenart
 
 1998-11-04  Eric Estievenart  <eric@via.ecp.fr>
