--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1998-11-04  Marc J. Fraioli  <fraioli@dg-rtp.dg.com>
+
+	* ltconfig.in (uts4, dgux): new supported platforms
+
 1998-11-04  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltconfig.in (need_locks): if neither `-c -o' nor hard links are
