* THANKS: Added Marc J. Fraioli

--- a/THANKS
+++ b/THANKS
@@ -19,6 +19,7 @@ Joel Cannon <cannon@alpha.centenary.edu>
 Joel N. Weber II <devnull@gnu.org>
 Karl Berry <kb@cs.umb.edu>
 Kenneth Albanowski <kjahds@kjahds.com>
+Marc J. Fraioli <fraioli@dg-rtp.dg.com>
 Mark Kettenis <kettenis@phys.uva.nl>
 Mimi Burbank <mimi@scri.fsu.edu>
 Oliver Guntermann <og@informatik.uni-hannover.de>
