--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1998-11-04  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* THANKS: Added Marc J. Fraioli
+
 1998-11-04  Marc J. Fraioli  <fraioli@dg-rtp.dg.com>
 
 	* ltconfig.in (uts4, dgux): new supported platforms
