--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1998-11-04  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltconfig.in (compiler_o_lo): check whether we can write directly 
+	to a .lo
+	* ltmain.in (compiler_o_lo): if not, write to .o and rename it
+
 1998-11-04  Ian Lance Taylor  <ian@cygnus.com>
 
 	* ltconfig.in: For sunos4 using GNU ld, set hardcode_minus_L to
