--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1998-11-04  Ian Lance Taylor  <ian@cygnus.com>
+
+	* ltconfig.in: On AIX, don't treat GNU ld specially.
+
 1998-11-04  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltconfig.in (hardcode_minus_L): Revert Ian's patch for
