--- a/THANKS
+++ b/THANKS
@@ -13,6 +13,7 @@ Bruno Haible <haible@ilog.fr>
 Carl D. Roth <roth@cse.ucsc.edu>
 Charles S. Kerr <cskerr@delenn.jccbi.gov>
 Eric Estievenart <eric@via.ecp.fr>
+Gary V. Vaughan <gvaughan@oranda.demon.co.uk>
 H.J. Lu <hjl@gnu.org>
 Ian Lance Taylor <ian@cygnus.com>
 Joel Cannon <cannon@alpha.centenary.edu>
@@ -24,6 +25,7 @@ Mark Kettenis <kettenis@phys.uva.nl>
 Mimi Burbank <mimi@scri.fsu.edu>
 Oliver Guntermann <og@informatik.uni-hannover.de>
 Thomas Esser <te@informatik.uni-hannover.de>
+Thomas Tanner <tanner@gmx.de>
 Tom Tromey <tromey@cygnus.com>
 Ulrich Drepper <drepper@ipd.info.uni-karlsruhe.de>
 Volker Kuhlmann <kuhlmav@elec.canterbury.ac.nz>
