--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1998-11-04  Michael Tiemann  <tiemann@cygnus.com>
+
+	* ltconfig.in (irix6): it's a little bit different from irix5
+
 1998-11-04  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* THANKS: Added Thomas Tanner and Gary V. Vaughan
