--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1998-11-07  Marc J. Fraioli  <fraioli@dg-rtp.dg.com>
+
+	* README: Added DG/UX
+	* doc/PLATFORMS: ditto
+
 1998-11-04  Michael Tiemann  <tiemann@cygnus.com>
 
 	* ltconfig.in (irix6): it's a little bit different from irix5
