* ltconfig.in: add --falback-echo, to be used if everything else  	fails.  The tests now check the behavior of $echo for very large  	strings, because some echo commands would just core dump (e.g.,  	Solaris' printf).  If too large strings fail, smaller ones are  	tested. 	(ltecho): arrange that, if the --fallback-echo method is selected, 	echo will be defined in the libtool script so as to re-run itself, 	not ltconfig 	* ltmain.in: add --fallback-echo 	(qecho) ensure that, if --falback-echo is being used, qecho is 	defined with the full pathname of the libtool script

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+1998-11-07  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltconfig.in: add --falback-echo, to be used if everything else
+ 	fails.  The tests now check the behavior of $echo for very large
+ 	strings, because some echo commands would just core dump (e.g.,
+ 	Solaris' printf).  If too large strings fail, smaller ones are
+ 	tested.
+	(ltecho): arrange that, if the --fallback-echo method is selected, 
+	echo will be defined in the libtool script so as to re-run itself, 
+	not ltconfig
+	* ltmain.in: add --fallback-echo
+	(qecho) ensure that, if --falback-echo is being used, qecho is
+	defined with the full pathname of the libtool script
+
 1998-11-07  Thomas Tanner  <tanner@gmx.de>
 
 	* mdemo/main.c: removed hardcoded library names; link against -lm
