--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,26 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.2c - 1998-XX-XX:
+* Inter-library dependencies patch finally integrated, but there's
+still much porting to do.  See PORTING for details (some plans for the 
+future in mail/deplibs in the CVS tree).
+* Initial support for portable dlopen()ing of modules (see mdemo).
+* libtool now supports `-c -o' and subdirectories in sources and
+target object names even in platforms whose compilers do not support
+this.  In this case, file locking occurs to avoid problems with
+parallel builds.
+* New `echo' variant that should fix most problems with long command
+lines and broken printf programs.
+* Support for *-*-dgux*, and improved support for Microsoft Windows
+* Various bugfixes
+* We now have anonymous CVS access to GNU libtool.  CVSROOT is
+:pserver:anoncvs@anoncvs.gnu.org:/gd/gnu/anoncvsroot.  The password
+is empty.  The directory is libtool.  Check our home-page at
+www.gnu.org for details.
+* Alexandre Oliva has taken over the maintenance of libtool, but Gord
+agree to keep helping us, and many other developers have kind of
+joined the team.  But your contributions are still necessary for
+libtool to make progress.
 * Arguments to ltconfig have been changed to allow creation of a
 libtool C program.
 
