* ltmain.in (installed): new variable defined within a .la file,  	so that libtool can now link already-installed libraries into a 	program. 	* NEWS: ditto 	* doc/libtool.texi (Linking executables): document it

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 1998-11-19  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltmain.in (installed): new variable defined within a .la file,
+ 	so that libtool can now link already-installed libraries into a
+	program.
+	* NEWS: ditto
+	* doc/libtool.texi (Linking executables): document it
+
 	* ltmain.in (output_objdir): compute it from $output, not $arg
 
 1998-11-18  Alexandre Oliva  <oliva@dcc.unicamp.br>
