* ltmain.in (installed): new variable defined within a .la file,  	so that libtool can now link already-installed libraries into a 	program. 	* NEWS: ditto 	* doc/libtool.texi (Linking executables): document it

--- a/tests/ChangeLog
+++ b/tests/ChangeLog
@@ -1,3 +1,9 @@
+1998-11-19  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* mdemo-inst.test (libltdl): install it
+	* mdemo-unst.test (libltdl): uninstall it
+	* Makefile.am (TESTS): list ltdl-unst.test before mdemo-conf.test
+
 1998-11-07  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* sh.test (test X): ensure that the double-quote supposed to be
