* ltmain.in: missing `test' between `&&' and `"$module"'

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1998-11-19  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltmain.in: missing `test' between `&&' and `"$module"'
+
 	* ltconfig.in (echo_test_string): the whole ltconfig script was
 	too much for DU4.0's ksh, but the first 50 lines will be enough.
 
