added me as co-maintainer

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,4 @@ Foundation.
 
 Gordon Matzigkeit.  Designed and implemented libtool.
 Alexandre Oliva <oliva@dcc.unicamp.br>.  Co-maintainer.
+Thomas Tanner <tanner@gmx.de>.  Co-maintainer.
