--- a/THANKS
+++ b/THANKS
@@ -12,6 +12,7 @@ Akim Demaille <demaille@inf.enst.fr>
 Bruno Haible <haible@ilog.fr>
 Carl D. Roth <roth@cse.ucsc.edu>
 Charles S. Kerr <cskerr@delenn.jccbi.gov>
+Chris P. Ross <cross@eng.us.uu.net>
 Eric Estievenart <eric@via.ecp.fr>
 Gary V. Vaughan <gvaughan@oranda.demon.co.uk>
 H.J. Lu <hjl@gnu.org>
