--- a/README
+++ b/README
@@ -12,6 +12,7 @@ Shared library support has been implemented for these platforms:
   AIX 3.x (*-*-aix3*)
   AIX 4.x (*-*-aix4*)
   AmigaOS (*-*-amigaos*)
+  BSD/OS 4.x (*-*-bsdi4*)
   Digital/UNIX 3.x, 4.x, a.k.a. OSF/1 (*-*-osf3*, *-*-osf4*)
   DG/UX R4.11, R4.12, R4.20 (*-*-dguxR411*, *-*-dguxR412*, *-*-dguxR420*)
   FreeBSD 2.x, 3.x (*-*-freebsd2*, *-*-freebsd3*)
