--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,4 @@ Foundation.
 Gordon Matzigkeit.  Designed and implemented libtool.
 Alexandre Oliva <oliva@dcc.unicamp.br>.  Co-maintainer.
 Thomas Tanner <tanner@gmx.de>.  Co-maintainer.
+Gary V. Vaughan <garyv@oranda.demon.co.uk>.  Co-maintainer.
