--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1998-11-27  Gary V. Vaughan  <garyv@oranda.demon.co.uk>
+
+	* AUTHORS: Added myself as a co-maintainer.
+
+	* ltconfig.in (archive_cmds): The `;\' in a compound statement is
+	expanded wrongly for cygwin32, mingw32, aix3 and aix4. Changed to
+	`;'.
+
 1998-11-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* libtool.spec (URL): point to www.gnu.org
