--- a/ChangeLog
+++ b/ChangeLog
@@ -84,7 +84,7 @@
 1998-11-24  Thomas Tanner  <tanner@gmx.de>
 
 	* depdemo: added inter-library dependencies demo (doesn't work yet!)
-	* AUTHORS: added me to the list of maintainers
+	* AUTHORS: added myself to the list of maintainers
 
 1998-11-22  Thomas Tanner  <tanner@gmx.de>
 
