--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -1144,9 +1144,10 @@ Allow symbols from @var{output-file} to be resolved with @code{dlsym}
 (@pxref{Dlopened modules}).
 
 @item -export-symbols @var{symfile}
-Same as @samp{-export-dynamic}, except that it only exports symbols
-that are listed in @var{symfile}. The symbol file should end in @samp{.sym}
-and must contain the name of one symbol per line.
+Tells the linker to export only the symbols listed in @var{symfile}. 
+The symbol file should end in @samp{.sym} and must contain the name of one 
+symbol per line. This option does not work for modules.
+By default all symbols are exported.
 
 @item -L@var{libdir}
 Search @var{libdir} for required libraries that have already been
@@ -2266,7 +2267,7 @@ On some operating systems, a program symbol must be specially declared
 in order to be dynamically resolved with the @code{dlsym} (or
 equivalent) function.
 
-Libtool provides the @samp{-export-dynamic} and @samp{-export-symbols} link 
+Libtool provides the @samp{-export-dynamic} link 
 flags (@pxref{Link mode}), which does this declaration.  
 You need to use this flag if you are linking an application program that 
 dlopens other modules or a libtool library that will also be dlopened.
@@ -2328,7 +2329,7 @@ module, or the module is not found, then the application can recover
 without crashing.
 @end enumerate
 
-Libtool emulates @samp{-export-dynamic} and @samp{-export-symbols} 
+Libtool emulates @samp{-export-dynamic} 
 on static platforms by linking objects into the program at compile time, 
 and creating data structures that represent the program's symbol table.
 
@@ -2361,8 +2362,7 @@ in @var{dld_preloaded_symbols}.
 @cindex names of dynamic modules
 @cindex dynamic modules, names
 
-After a library has been linked with @samp{-export-dynamic} or 
-@samp{-export-symbols}, it can be dlopened.  
+After a library has been linked with @samp{-export-dynamic}, it can be dlopened.  
 Unfortunately, because of the variation in library names,
 your package needs to determine the correct file to dlopen.
 
