--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+1998-12-03  Thomas Tanner  <tanner@gmx.de>
+
+	* ChangeLog: converted CR/LF back to CR format
+	* ltconfig.in: new variable sys_lib_search_path for searching
+	of installed libraries, export archive_sym_cmds and 
+	sys_lib_search_path
+	* ltmain.in: use sys_lib_search_path, removed extradeplibs
+	(they're not portable)
+	
 1998-12-02  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 
 	* libltdl/configure.in: look for string.h or else strings.h, and
@@ -23,7 +32,7 @@
 	* mdemo/modules/Makefile.am: replaced -export-symbols with 
 	-export-dynamic since it doesn't work for modules
 	
-1998-12-01  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
+1998-12-01  Gary V. Vaughan  <garyv@oranda.demon.co.uk>
 
 	* README: Updated homepage pointer to gnu libtool page.
 
@@ -46,7 +55,7 @@
 
 	* config.guess, config.sub: imported from autoconf pre-2.13
 
-1998-11-27  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
+1998-11-27  Gary V. Vaughan  <garyv@oranda.demon.co.uk>
 
 	* libtool (AM_PROG_LD): Oops... we need to know the host_os for
 	the changes below.  I'm not sure whether mingw32 and os2 support
