--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1998-12-04  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* Makefile.am (mdemo_distfiles): libfoo[12].sym no longer exist
+
 	* ltconfig.in (solaris): do not use $CC for linking if GNU ld is
 	not available
 
